--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,3 +2,101 @@
     background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
     height: 100vh;
 }
+
+header{
+	background: #002E6D;
+	color: #fff;
+}
+
+body{
+	background: #eaeaea;
+}
+
+
+.navbar-default {
+    background-color: #002E6D;
+    border-color: #002E6D;
+    margin-bottom: 0;
+}
+
+
+.navbar-header > a {
+	color: #f7f7f7;
+}
+
+.navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li > a {
+	color: #f7f7f7;
+}
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+	color: #1e1e1e;
+	background: #f7f7f7;
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active >
+a:hover, .navbar-default .navbar-nav > .active > a:focus {
+	color: #f7f7f7;
+	background-color: #002659;
+}
+
+.dropdown-menu > li > a, .dropdown-menu > li > a {
+
+   background-color: #f7f7f7;
+}
+
+/*
+
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+   color: white;
+   text-decoration: none;
+   background-color: #002E6D;  change color of links in drop down here
+}
+
+.nav > li > a:hover, .nav > li > a:focus {
+   text-decoration: none;
+   background-color: yellow; Change rollover cell color here
+}
+
+
+.navbar-default .navbar-nav > li .active{
+	background: #00214c;
+   color: white; Change active text color here
+}*/
+
+.main{
+	background: #f7f7f7;
+	color: #1e1e1e;
+}
+
+.etiqueta{
+	background: #CC0000;
+	color: #fff;
+	padding-top: 10px;
+	text-align: center;
+}
+
+.social{
+
+}
+
+.licencia{
+	padding-top: 10px;
+}
+
+.mislider{
+	padding: 0;
+}
+
+aside{
+	background: #f7f7f7;
+	color: #1e1e1e;
+}
+
+aside > h3 {
+	color: #002E6D;
+}
+
+footer{
+	background: #333333;
+	color: #f7f7f7;
+}
